# cbor-core

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN-NOTES.md  Dockerfile.ci  NEWS.md  README.md  build-docs.sh  ci-local.sh
examples/: cbor2diag.rs  const_values.rs  decode_cbor_data.rs  decode_cbor_diagnostic.rs  decode_cbor_sequence.rs  diag2cbor.rs  encode_cbor_data.rs  encode_cbor_sequence.rs  macros.rs  serde_borrow.rs  serde_enum_struct.rs  serde_enum_tuple.rs  serde_enum_unit.rs  serde_struct.rs
src/: array.rs  bytes.rs  codec.rs  consts.rs  data_type.rs  date_time.rs  decode_options.rs  decoder.rs  encoder.rs  epoch_time.rs  error.rs  ext.rs  ext_num_bigint.rs  float.rs  format.rs  integer.rs  io.rs  iso3339.rs  lib.rs  limits.rs  macros.rs  map.rs  parse.rs  simple_value.rs  strictness.rs  tag.rs  tests.rs  text.rs  util.rs  value.rs  value_key.rs  view.rs
src/ext/: chrono.rs  crypto_bigint.rs  half.rs  jiff.rs  num_bigint.rs  rug.rs  serde.rs  time.rs
src/tests/: bigint_interop.rs  borrowing.rs  collections.rs  debug.rs  decode_options.rs  integers.rs  limits.rs  non_deterministic.rs  parse.rs  rundgren.rs  sequence.rs  simple_value.rs  time_interop.rs  value.rs
src/value/: array.rs  bytes.rs  debug.rs  default_eq_ord_hash.rs  eq_ord_hash.rs  float.rs  index.rs  int.rs  map.rs  simple_value.rs  string.rs
