[package]
name = "cbor-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "CBOR::Core deterministic encoder/decoder with owned data structures"
documentation = "https://docs.rs/cbor-core"
repository = "https://github.com/mrothNET/cbor-core"
keywords = [
    "cbor",
    "encoding",
    "decoding",
    "serialization",
    "deterministic",
    "canonical",
]
categories = ["encoding", "data-structures"]
exclude = [".*"]

[dependencies]
