[package]
name = "cbor-core"
version = "0.4.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
description = "CBOR::Core deterministic encoder/decoder with owned data structures"
documentation = "https://docs.rs/cbor-core"
repository = "https://github.com/mrothNET/cbor-core"
keywords = ["cbor", "encoding", "decoding", "serialization", "deterministic"]
categories = ["encoding", "data-structures"]
exclude = [".*", "Cargo.lock", "Dockerfile.ci", "ci-local.sh"]

[features]
## Add interoperability with num-bigint crate
num-bigint = ["dep:num-bigint"]
## Add interoperability with crypto-bigint crate
crypto-bigint = ["dep:crypto-bigint"]

[dependencies]
num-bigint = { version = "0.4", optional = true }
crypto-bigint = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
