[package]
name = "cbor-core"
version = "0.9.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "CBOR::Core deterministic encoder/decoder with owned data structures"
documentation = "https://docs.rs/cbor-core"
repository = "https://github.com/mrothNET/cbor-core"
keywords = ["cbor", "encoding", "decoding", "serialization", "deterministic"]
categories = ["encoding", "data-structures"]
exclude = [".*", "Dockerfile.ci", "*.sh"]

[features]
## Add interoperability with num-bigint crate
num-bigint = ["dep:num-bigint"]
## Add interoperability with crypto-bigint crate
crypto-bigint = ["dep:crypto-bigint"]
## Add interoperability with rug crate
rug = ["dep:rug"]
## Add interoperability with chrono crate
chrono = ["dep:chrono"]
## Add interoperability with time crate
time = ["dep:time"]
## Add interoperability with jiff crate
jiff = ["dep:jiff"]
## Add interoperability with half crate
half = ["dep:half"]
## Add interoperability with serde crate
serde = ["dep:serde"]

[dependencies.num-bigint]
version = "0.4"
optional = true

[dependencies.crypto-bigint]
version = "0.7"
optional = true

[dependencies.rug]
version = "1"
default-features = false
features = ["std", "integer"]
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]
optional = true

[dependencies.time]
version = "0.3"
features = ["formatting", "parsing"]
optional = true

[dependencies.jiff]
version = "0.2.23"
default-features = false
features = ["std"]
optional = true

[dependencies.half]
version = "2"
default-features = false
optional = true

[dependencies.serde]
version = "1"
optional = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "serde_struct"
required-features = ["serde"]

[[example]]
name = "serde_enum_unit"
required-features = ["serde"]

[[example]]
name = "serde_enum_tuple"
required-features = ["serde"]

[[example]]
name = "serde_enum_struct"
required-features = ["serde"]

[[example]]
name = "serde_borrow"
required-features = ["serde"]
